# PneuStore_API/Controllers/ProdutoController.cs
@@ -1,72 +1,132 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using Microsoft.AspNetCore.Authorization;
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Mvc;
+using PneuStore_API.API;
 using PneuStore_API.Model;
 using PneuStore_API.Services;
 using System;
 using System.Collections.Generic;
 using System.Linq;
+using System.Net;
+using System.Net.Mime;
+using System.Security.Claims;
 using System.Threading.Tasks;
 
 namespace PneuStore_API.Controllers
 {
+    [Produces(MediaTypeNames.Application.Json)]
+    [Consumes(MediaTypeNames.Application.Json)]
+    [AuthorizeRoles(RoleType.Common, RoleType.Admin)]
     [ApiController]
     [Route("[controller]")]
     public class ProdutoController : ApiBaseController
     {
         IProdutoService _service;
+
         public ProdutoController(IProdutoService service)
         {
             _service = service;
         }
+        /// <summary>
+        /// Informa os produtos registrados
+        /// </summary>
+        /// <returns></returns>
+        /// 
+        [ProducesResponseType(StatusCodes.Status200OK)]
+        [ProducesResponseType(StatusCodes.Status404NotFound)]
         [HttpGet]
-        public IActionResult Index() =>
-            ApiOk(_service.All());
+        [Route("Todos")]
+        public IActionResult Index() => ApiOk(_service.All());
+
+        /// <summary>
+        /// Busca um produto pelo id
+        /// </summary>
+        /// <param name="id"></param>
+        /// <returns></returns>
+
 
         [Route("{id}")]
         [HttpGet]
+
         public IActionResult Index(int? id)
         {
-            Product exists = _service.Get(id);
-            return exists == null ?
-                ApiNotFound("Não foi encontrado o produto solicitado.") :
-                ApiOk(exists);
+            var existe = _service.Get(id);
+            return existe == null ?
+                ApiNotFound("Produto não encontrado") :
+                ApiOk(existe);
         }
+        /// <summary>
+        /// Busca um produto aleatorio dentro do banco
+        /// </summary>
+        /// <returns></returns>
+        [Route("Random"), HttpGet]
+        [Authorize]
+        public IActionResult Random()
+        {
+            Random rnd = new();
+            List<Product> lista = _service.All();
+            return ApiOk(lista[rnd.Next(lista.Count)]);
 
-        //[HttpPost]
-        //public IActionResult Create([FromBody] Product p) =>
-        //    _service.Create(p) ?
-        //    ApiOk("Produto criado com sucesso !") :
-        //    ApiNotFound("Erro ao criar o produto!");
 
-        [HttpPut("{id}")]
-        public IActionResult Update([FromBody] Product p) =>
-            _service.Update(p) ?
-            ApiOk("O produto foi atualizado com sucesso !") :
-            ApiNotFound("Erro ao atualizar o carrinho");
+        }
+        /// <summary>
+        /// Mostra os produtos criados por um tipo de usuário.
+        /// </summary>
+        /// <param name="role"></param>
+        /// <returns></returns>
+        [AllowAnonymous]
+        [Route("StoresByRole/{role?}")]
+        [HttpGet]
+        public IActionResult StoreByRole(string role)
+        {
+            return ApiOk(_service.ProductByUserRole(role));
+        }
+        /// <summary>
+        /// Cadastra um novo produto.
+        /// </summary>
+        /// <param name="item"></param>
+        /// <returns></returns>
+        [HttpPost]
+        [Authorize]
+
+        public IActionResult Create([FromBody] Product item)
+        {
+            item.createdById = User.Claims.FirstOrDefault(c => c.Type
+            == ClaimTypes.NameIdentifier).Value;
 
 
-        //[Route("{id}")]
-        //[HttpPut]        
-        //public IActionResult Update([FromBody] Product p)
-        //{
-           
-        //    return _service.Update(p) ?
-        //    ApiOk("Produto atualizado com sucesso") :
-        //    ApiNotFound("Produto não foi atualizado");
-        //}
+            return _service.Create(item) ?
+            ApiOk("Produto criado com sucesso") :
+            ApiNotFound("Produto não foi criado");
 
+        }
+        /// <summary>
+        /// Atualiza um produto
+        /// </summary>
+        /// <param name="item"></param>
+        /// <returns></returns>
+        [HttpPut]
+        [Authorize]
+        public IActionResult Update([FromBody] Product item)
+        {
+            item.updatedById = User.Claims.FirstOrDefault(c => c.Type
+            == ClaimTypes.NameIdentifier).Value;
+
+            return _service.Update(item) ?
+            ApiOk("Produto atualizado com sucesso") :
+            ApiNotFound("Produto não foi atualizado");
+        }
+        /// <summary>
+        /// Exclui um produto
+        /// </summary>
+        /// <param name="id"></param>
+        /// <returns></returns>
+        [AuthorizeRoles(RoleType.Admin)]
         [Route("{id}")]
         [HttpDelete]
         public IActionResult Delete(int? id) =>
-          _service.Delete(id) ?
-              ApiOk("O produto foi deletado com sucesso!") :
-              ApiNotFound("Erro ao deletar o produto!");
-
-
-        ///[Route("Product/{itemId}")]
-        //    [HttpGet]
-        //    public IActionResult ProductByUserRole(string role)// função criada para instanciar o método BooksByUserRole da classe BooksSQLService 
-        //    {
-        //        return ApiOk(_service.ProductByUserRole(role));// instancia o método de BooksSQLService passando como referencia o tipo de usúario (Admin/Common) e retorna usando um ApiOk
-        //    }
+            _service.Delete(id) ?
+            ApiOk("Produto deletado com sucesso") :
+            ApiNotFound("Produto não foi deletado");
     }
 }
