# PneuStore_API/bin/Release/net5.0/swagger.json
@@ -212,6 +212,30 @@
             "description": "Success"
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Produto"
+        ],
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/Product"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
       }
     },
     "/Produto/{id}": {
